# programacao-concorrente-e-distribuida

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  app.c
resources/: input.txt
src/: CMakeLists.txt
src/lists/: CMakeLists.txt  listdouble.c  listfloat.c  listint.c  listint.h  liststr.c
src/lists/include/: CMakeLists.txt  list.h  listdouble.h  listint.h  liststr.h
src/main/: list.h  listfloat.h  listint.c  listint.h  liststr.c  liststr.h  main.c  modelo_leitor_arquivo.c
src/main/data/: ecg-heartbeat.txt  motif-discords.txt
src/math/: CMakeLists.txt  euclidean.c
src/math/include/: euclidean.h
src/str/: utils.h
tests/: CMakeLists.txt
tests/lists/: CMakeLists.txt  list_double_tests.cpp  list_int_tests.cpp
tests/math/: CMakeLists.txt  euclidean_tests.cpp  math_lib_tests.cpp
vizinhos/: CMakeLists.txt
